@@ -12,6 +12,7 @@ ver 0.20.22 (not yet released)
   - now runs as a service
   - add button to start/stop MPD
   - add option to auto-start on boot
+* work around clang bug leading to crash
 * install the SVG icon
 
 ver 0.20.21 (2018/08/17)
